--- a/data-architect.html
+++ b/data-architect.html
@@ -128,7 +128,7 @@ applications?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1EV9fwt&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nsfwPKwh'>ServiceNow Careers - Principal Database Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1EV9fwt&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nsfwPKwh'>ServiceNow Careers - Principal Database Architect</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -153,7 +153,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
@@ -186,7 +186,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oGeoafwc'>Logitech Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/oGeoafwc'>Logitech Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Data Architect is responsible to oversee the technical architecture, data 
 model, and performance of data solutions; influence change and enforce data 
@@ -208,7 +208,7 @@ best?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-21453-dN0vtqP7yr6B6eaKkRyNN8'>Data/Technical Architect-21453 #0171 job at Radiant Digital in Lake Mary, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-21453-dN0vtqP7yr6B6eaKkRyNN8'>Data/Technical Architect-21453 #0171 job at Radiant Digital in Lake Mary, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -246,7 +246,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/O3riO8DgfD/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/O3riO8DgfD/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -284,7 +284,7 @@ class?...</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -308,7 +308,7 @@ class?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -317,7 +317,7 @@ class?...</p>
 <p>Jun 29, 2019 ... We're looking for an expert communicator with a strong customer orientation and 
 object-oriented programming experience to join our IT team as a Data Architect?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691378266-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691378266-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -329,7 +329,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
+<h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -338,7 +338,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p>Jun 26, 2019 ... Data and Machine Learning Scientist. United States of America, Illinois, Chicago. 
 Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=oslG9fwm&__jvst=Employee+Referral&__jvsd=sn5cpgwO&__jvsc=Twitter&bid=nQc4BKwW'>Hobsons Careers - Big Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=oslG9fwm&__jvst=Employee+Referral&__jvsd=sn5cpgwO&__jvsc=Twitter&bid=nQc4BKwW'>Hobsons Careers - Big Data Architect</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
@@ -385,7 +385,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -393,7 +393,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1755766'>Job Application for Business Intelligence Datawarehouse Architect at SimpliSafe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1755766'>Job Application for Business Intelligence Datawarehouse Architect at SimpliSafe</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -418,7 +418,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690974795--full-time-positions-enterprise-cloud-and-data-architect-salary-200-285k'>Bey (Full-Time Positions) Enterprise Cloud and Data Architect  ? Salary: $200-285K | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690974795--full-time-positions-enterprise-cloud-and-data-architect-salary-200-285k'>Bey (Full-Time Positions) Enterprise Cloud and Data Architect  ? Salary: $200-285K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
